--- a/app.json
+++ b/app.json
@@ -24,7 +24,15 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router",
+      [
+        "expo-font",
+        {
+          "fonts": ["assets/fonts/Overpass-Regular.ttf"]
+        }
+      ]
+    ],
     "scheme": "your-app-scheme"
   }
 }
