--- a/app.json
+++ b/app.json
@@ -29,7 +29,12 @@
       [
         "expo-font",
         {
-          "fonts": ["assets/fonts/Overpass-Regular.ttf"]
+          "fonts": [
+            "assets/fonts/Overpass-Regular.ttf",
+            "assets/fonts/Overpass-Bold.ttf",
+            "assets/fonts/Overpass-Light.ttf",
+            "assets/fonts/PixelifySans-Regular.ttf"
+          ]
         }
       ]
     ],
