--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
     "@supabase/supabase-js": "^2.39.8",
     "expo": "~50.0.13",
     "expo-constants": "~15.4.5",
+    "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
     "expo-status-bar": "~1.11.1",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.5",
     "react-native-elements": "^3.4.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-url-polyfill": "^2.0.0",
-    "expo-font": "~11.10.3"
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
