--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-screens": "~3.29.0",
     "react-native-url-polyfill": "^2.0.0",
     "expo-crypto": "~12.8.1",
-    "@react-native-picker/picker": "2.6.1"
+    "@react-native-picker/picker": "2.6.1",
+    "@react-native-community/datetimepicker": "7.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
