--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-url-polyfill": "^2.0.0",
     "expo-crypto": "~12.8.1",
     "@react-native-picker/picker": "2.6.1",
-    "@react-native-community/datetimepicker": "7.6.1"
+    "@react-native-community/datetimepicker": "7.6.1",
+    "react-native-reanimated": "~3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
