--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/datetimepicker": "7.6.1",
+    "@react-native-picker/picker": "2.6.1",
     "@supabase/supabase-js": "^2.39.8",
     "expo": "~50.0.13",
     "expo-constants": "~15.4.5",
+    "expo-crypto": "~12.8.1",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
@@ -21,13 +24,11 @@
     "react": "18.2.0",
     "react-native": "0.73.5",
     "react-native-elements": "^3.4.3",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-url-polyfill": "^2.0.0",
-    "expo-crypto": "~12.8.1",
-    "@react-native-picker/picker": "2.6.1",
-    "@react-native-community/datetimepicker": "7.6.1",
-    "react-native-reanimated": "~3.6.2"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
